// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage should render 404 1`] = `
<div>
  <div
    class="MuiBox-root css-19703gc"
  >
    <h1
      class="MuiTypography-root MuiTypography-h1 css-2c7tpz-MuiTypography-root"
    >
      404
    </h1>
    <p
      class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
    >
      Not Found
    </p>
    <div
      class="MuiBox-root css-0"
    >
      <a
        class="link"
        href="/"
      >
        goHome
      </a>
    </div>
  </div>
</div>
`;

exports[`ErrorPage should render 500 1`] = `
<div>
  <div
    class="MuiBox-root css-19703gc"
  >
    <h1
      class="MuiTypography-root MuiTypography-h1 css-2c7tpz-MuiTypography-root"
    >
      Oops
    </h1>
    <div
      class="MuiBox-root css-0"
    >
      <a
        class="link"
        href="/"
      >
        goHome
      </a>
    </div>
  </div>
</div>
`;
